# job-search-mx-assistant

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_WINDOWS.bat  INSTALL_WINDOWS.bat  LICENSE  README.es.md  README.md  SECURITY.md  START_LINUX.sh  START_WINDOWS.bat  pyproject.toml  run_cli.py  run_gui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRIVACY.md  ROADMAP.md  USER_GUIDE.en.md  USER_GUIDE.es.md
examples/: job-posting.txt  profile.example.json
prompts/: README.md
prompts/en/: cover-letter.md  evaluate-job.md  interview-prep.md  tailor-resume.md
prompts/es/: adaptar-cv.md  carta-presentacion.md  evaluar-vacante.md  preparar-entrevista.md
scripts/: build.ps1  build.sh  install.ps1  install.sh  run-cli.ps1  run-cli.sh  run-gui.ps1  run-gui.sh
src/jobsearch_assistant/: __init__.py  cli.py  config.py  database.py  evaluator.py  exporters.py  gui.py  i18n.py  models.py  search_queries.py
tests/: test_config.py  test_database.py  test_evaluator.py  test_search_queries.py
